force-app/main/default/objects/Marketing_Action__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Month_Order__c</fullName>
        <formula>IF(MONTH( End_Date__c )=8,1,IF(MONTH( End_Date__c )=9,2,IF(MONTH( End_Date__c )=10,3,IF(MONTH( End_Date__c )=11,4,IF(MONTH( End_Date__c )=12,5,IF(MONTH( End_Date__c )=1,6,IF(MONTH( End_Date__c )=2,7,IF(MONTH( End_Date__c )=3,8,IF(MONTH( End_Date__c )=4,9,IF(MONTH( End_Date__c )=5,10,IF(MONTH( End_Date__c )=6,11,IF(MONTH( End_Date__c )=7,12,0))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Month Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_Drill_Down__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Back Page</fullName>
                </value>
                <value>
                    <fullName>Eight Page</fullName>
                </value>
                <value>
                    <fullName>Front Page Large</fullName>
                </value>
                <value>
                    <fullName>Front Page Small</fullName>
                </value>
                <value>
                    <fullName>Full Page</fullName>
                </value>
                <value>
                    <fullName>Half Page</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Inside Cover</fullName>
                </value>
                <value>
                    <fullName>Other Web format</fullName>
                </value>
                <value>
                    <fullName>Quarter Page</fullName>
                </value>
                <value>
                    <fullName>Small Banner</fullName>
                </value>
                <value>
                    <fullName>Small Box</fullName>
                </value>
                <value>
                    <fullName>Top Banner</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_Drill_Down__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Folded A4</fullName>
                </value>
                <value>
                    <fullName>Folder A3</fullName>
                </value>
                <value>
                    <fullName>4 Pages</fullName>
                </value>
                <value>
                    <fullName>6 Pages</fullName>
                </value>
                <value>
                    <fullName>8 Pages</fullName>
                </value>
                <value>
                    <fullName>10 Pages</fullName>
                </value>
                <value>
                    <fullName>12 Pages</fullName>
                </value>
                <value>
                    <fullName>14 Pages</fullName>
                </value>
                <value>
                    <fullName>16 Pages</fullName>
                </value>
                <value>
                    <fullName>18 Pages</fullName>
                </value>
                <value>
                    <fullName>20 Pages</fullName>
                </value>
                <value>
                    <fullName>22 Pages</fullName>
                </value>
                <value>
                    <fullName>24 Pages</fullName>
                </value>
                <value>
                    <fullName>26 Pages</fullName>
                </value>
                <value>
                    <fullName>28 Pages</fullName>
                </value>
                <value>
                    <fullName>&gt;30 Pages</fullName>
                </value>
                <value>
                    <fullName>&gt;50 Pages</fullName>
                </value>
                <value>
                    <fullName>&gt;100 Pages</fullName>
                </value>
                <value>
                    <fullName>5 Seconds</fullName>
                </value>
                <value>
                    <fullName>10 Seconds</fullName>
                </value>
                <value>
                    <fullName>15 Seconds</fullName>
                </value>
                <value>
                    <fullName>20 Seconds</fullName>
                </value>
                <value>
                    <fullName>30 Seconds</fullName>
                </value>
                <value>
                    <fullName>&gt; 1 Minute</fullName>
                </value>
                <value>
                    <fullName>&gt;5 Minutes</fullName>
                </value>
                <value>
                    <fullName>&gt;10 Minutes</fullName>
                </value>
                <value>
                    <fullName>&gt; 20 Minutes</fullName>
                </value>
                <value>
                    <fullName>&gt;30 Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Outlet__c</fullName>
        <label>Marketing Channel</label>
        <referenceTo>Marketing_Outlet__c</referenceTo>
        <relationshipLabel>Marketing Actions</relationshipLabel>
        <relationshipName>Marketing_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>IF( MONTH(Start_Date__c) =8, &quot;August &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =9, &quot;September &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =10, &quot;October &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =11, &quot;November &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =12, &quot;December &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =1, &quot;January &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =2, &quot;February &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =3, &quot;March &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =4, &quot;April &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =5, &quot;May &quot;&amp; TEXT(YEAR(Start_Date__c)),

IF( MONTH(Start_Date__c) =6, &quot;June &quot;&amp; TEXT(YEAR(Start_Date__c)),

&quot;July &quot;&amp; TEXT(YEAR(Start_Date__c)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Conditions__c</fullName>
        <label>Payment Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_Drill_Down__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;5</fullName>
                </value>
                <value>
                    <fullName>&lt;10</fullName>
                </value>
                <value>
                    <fullName>&lt;25</fullName>
                </value>
                <value>
                    <fullName>&lt;50</fullName>
                </value>
                <value>
                    <fullName>&lt;100</fullName>
                </value>
                <value>
                    <fullName>&lt;200</fullName>
                </value>
                <value>
                    <fullName>&lt;500</fullName>
                </value>
                <value>
                    <fullName>&lt;1000</fullName>
                </value>
                <value>
                    <fullName>&lt;2000</fullName>
                </value>
                <value>
                    <fullName>&lt;3000</fullName>
                </value>
                <value>
                    <fullName>&lt;5000</fullName>
                </value>
                <value>
                    <fullName>&lt;10000</fullName>
                </value>
                <value>
                    <fullName>&lt;20000</fullName>
                </value>
                <value>
                    <fullName>&lt;50000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>CreatedBy.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Month_Order__c</fullName>
        <formula>IF(MONTH( Start_Date__c )=8,1,IF(MONTH( Start_Date__c )=9,2,IF(MONTH( Start_Date__c )=10,3,IF(MONTH( Start_Date__c )=11,4,IF(MONTH( Start_Date__c )=12,5,IF(MONTH( Start_Date__c )=1,6,IF(MONTH( Start_Date__c )=2,7,IF(MONTH( Start_Date__c )=3,8,IF(MONTH( Start_Date__c )=4,9,IF(MONTH( Start_Date__c )=5,10,IF(MONTH( Start_Date__c )=6,11,IF(MONTH( Start_Date__c )=7,12,0))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Month Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Drill_Down__c</fullName>
        <label>Type Drill Down</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Advertorial</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Event Outside School</fullName>
                </value>
                <value>
                    <fullName>Fayre - Themed Event</fullName>
                </value>
                <value>
                    <fullName>Flyer Distribution</fullName>
                </value>
                <value>
                    <fullName>Fun Day</fullName>
                </value>
                <value>
                    <fullName>Internet Ad</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Open Day</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Ad</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>Other Printed Material</fullName>
                </value>
                <value>
                    <fullName>Pamphlet</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Promotional Video</fullName>
                </value>
                <value>
                    <fullName>Prospectus</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Visit Agents/Companies/Embassies</fullName>
                </value>
                <value>
                    <fullName>Website Content Update</fullName>
                </value>
                <value>
                    <fullName>Year Book</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Marketing Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>